[package]
name = "esphome"
version = "0.1.0"
edition = "2021"
description = "ESPHome API client for Rust."
repository = "https://github.com/pixelspark/esphome-rs"
license = "MIT"

[lib]
name = "esphome"
path = "src/lib.rs"

[dependencies]
protobuf = "3"
thiserror = "2.0.11"
num-traits = "0.2"
num-derive = "0.4.2"

[dev-dependencies]
structopt = "0.3"

[build-dependencies]
protobuf-codegen = "3.7.1"
